[project]
name = "census-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pynvim>=0.5.2",
    "ruff>=0.11.12",
]
